<resources>
    <string name="app_name">BullKeeper Kids</string>
    <string name="action_refresh">Refresh</string>
    <string name="btn_restart">Restart</string>
    <string name="btn_details">Details</string>
    <string name="btn_close">Close</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="important_notification_channel_id">important_channel</string>
    <string name="important_notification_channel_title">Important notifications</string>
    <string name="important_notification_channel_content">Alerts and important notices</string>
    <string name="default_notification_channel_id">@string/important_notification_channel_id</string>
    <string name="title_activity_lock_screen">LockScreenActivity</string>
    <string name="content_not_be_loaded">Content can not be loaded</string>
    <string name="menu_pick_me_up">Pick Me Up</string>
    <string name="menu_time_bank">Time Bank</string>
    <string name="menu_sos">S.O.S</string>
    <string name="menu_chat">Chat</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="sign_in_title">Please login with the main account information</string>
    <string name="email_address_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="accept">I understood</string>
    <string name="show_detail">Show Detail</string>
    <string name="discard">Discard</string>
    <string name="first_page_title">Welcome to BullKeeper Kids</string>
    <string name="first_page_registration_terms_and_conditions" formatted="false">If you continue, you accept our %s and %s</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service_not_accepted">You must accept the license terms to continue</string>
    <string name="terms_of_service_url">file:///android_asset/web/terms_of_service_content.html</string>
    <string name="privacy_policy_url">file:///android_asset/web/privacy_policy_content.html</string>
    <string name="second_page_title">BullKeeper Kids: Permissions for data access</string>
    <string name="second_page_description">The BullKeeper Kids app needs access to certain data and information of this device. This assistant will request your permission to the data that is accessed through the app</string>
    <string name="third_page_title">BullKeeper Kids needs access:</string>
    <string name="third_page_location_history_title">Location history</string>
    <string name="third_page_location_history_description">BullKeeper Kids needs to periodically store the location in your account for the exclusive use of BullKeeper.</string>
    <string name="third_page_location_history_reason">BullKeepper Kids will need to access the current position for the functionality of "Family Locator"</string>
    <string name="third_page_call_logs_title">Call logs</string>
    <string name="third_page_call_logs_description">BullKeeper Kids will synchronize the call history. In order to stay informed about the calls received and made at all times</string>
    <string name="third_page_call_logs_reason">Bullkeeper kids needs access to call history to keep informed about possible threats</string>
    <string name="third_page_contacts_title">Contacts</string>
    <string name="third_page_contacts_description">BullKeeper Kids will synchronize the list of contacts stored in the device with the aim of offering you information about the users with whom you usually contact</string>
    <string name="third_page_contacts_reason">Bullkeeper kids needs access to the list of contacts to inform you about the usual contacts</string>
    <string name="third_page_text_messages_title">Text messages</string>
    <string name="third_page_text_messages_description">BullKeeper Kids synchronizes all SMS present in the device for further analysis, as well as the new SMS received after the installation of the application.</string>
    <string name="third_page_text_messages_reason">Bull Keeper Kids needs to obtain the content of the received SMS to analyze its content in a preventive way and detect possible threats.</string>
    <string name="third_page_storage_title">Storage system</string>
    <string name="third_page_storage_description">Bullkeeper kids needs access to the storage system to control resources stored in the device.</string>
    <string name="third_page_storage_reason">Bullkeeper Kids needs access to the storage system to ensure maximum control and protection</string>
    <string name="third_page_permission_enabled">Enabled</string>
    <string name="third_page_permission_disabled">Disabled</string>
    <string name="third_page_review_permission_request">You must review and enable all permissions to continue</string>
    <string name="four_page_title">You should consider that Bull Keeper Kids:</string>
    <string name="four_run_on_startup_title">Run at startup</string>
    <string name="four_run_on_startup_description">Every time the phone starts, BullKeeper Kids automatically starts working</string>
    <string name="four_run_in_the_background_title">Run in the background</string>
    <string name="four_run_in_the_background_description">Even if the phone is idle or in sleep mode, BullKeeper Kids still works in the background. BullKeeper Kids icon will always stay in the notification bar, that indicates background services are running.</string>
    <string name="title_activity_legal_content">LegalContentActivity</string>
    <string name="fifth_page_title">Bullkeeper Kids needs access to device statistics</string>
    <string name="fifth_page_description">We need to allow us to access the statistics service
        of the system, which allows us to retrieve statistics on the use of applications installed on the device in
        order to inform you about the applications used frequently, in addition to determining the application currently in use to offer you blocking capabilities</string>
    <string name="fifth_page_enable_usage_stats">Enable</string>
    <string name="fifth_page_usage_stats_already_allowed">You have already granted access to usage statistics</string>
    <string name="fifth_page_usage_stats_no_granted">You must grant access to usage statistics before continuing</string>
    <string name="fifth_page_usage_stats_granted">You have granted access to usage statistics</string>
    <string name="sixth_page_title">Bullkepper Kids requires administration permissions on this device</string>
    <string name="sixth_page_description">You need to allow Bullkeeper Kids to have adminsitration permissions on this device to prevent it from being uninstalled easily</string>
    <string name="sixth_page_admin_is_already_enabled">Management capabilities have already been granted</string>
    <string name="sixth_page_admin_is_granted">Management capabilities have been granted</string>
    <string name="sixth_page_admin_is_not_enabled">You must grant management capabilities before continuing</string>
    <string name="seventh_page_title">BullKeeper requires high precision geolocation</string>
    <string name="seventh_page_description">You must grant Bookkeeper high-pressure access to the location of the device</string>
    <string name="seventh_page_signin">Enable</string>
    <string name="seventh_page_location_already_allowed">You have already enabled high precision geolocation</string>
    <string name="seventh_page_location_is_not_enabled">You should enable high-pressure geolocation before continuing</string>
    <string name="eighth_page_title">Bullkeeper needs to overlap other applications</string>
    <string name="eighth_page_description">This permission allows Bullkeeper to be shown above other applications that are being used and may interfere with the use of iterfaz in other applications or change what the user thinks they are seeing in other applications</string>
    <string name="eighth_page_enable">Enable</string>
    <string name="eighth_page_overlap_already_allowed">You have already enabled the application overlay</string>
    <string name="eighth_page_overlap_is_not_enabled">You should enable the application overlay before continuing</string>
    <string name="ninth_page_title">Configuration completed !!!</string>
    <string name="ninth_page_description">Congratulations you have completed the configuration of the application, log in and start enjoying the capabilities offered by BullKeeper</string>
    <string name="ninth_page_signin">Log in</string>
    <string name="default_notice_dialog_title">Notice Dialog</string>
    <string name="required_administration_permissions">Bullkepper Kids requires administration permissions on this device</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="date_time_format">yyyy/MM/dd HH:mm:ss</string>
    <string name="date_time_format_2">yyyy/MM/dd HH:mm:ss.SSS</string>
    <string name="date_format_server_response">yyyy/MM/dd</string>
    <string name="joda_local_time_format_server_response">HH:mm:ss.SSS</string>
    <string name="authenticating_in_progress">Authenticating wait ...</string>
    <string name="authenticating_invalid_credentials">Incorrect username or password</string>
    <string name="authenticating_error_ocurred">An error occurred while authenticating, please try again</string>
    <string name="you_must_provide_email_and_password">You must provide an email and password</string>
    <string name="facebook_app_id">your_api_key_here</string>
    <string name="authenticating_with_facebook">Log in through Facebook</string>
    <string name="authenticating_with_facebook_canceled">The login was canceled by the user</string>
    <string name="authenticating_with_facebook_error">There was an error when logging in through Facebook</string>
    <string name="generic_loading_text">Please wait ...</string>
    <string name="link_terminal_first_page_title">This device is not linked to any supervised child</string>
    <string name="link_terminal_first_page_description">This assistant will guide you in the process of linking the terminal with the child</string>
    <string name="link_terminal_first_page_check">We are checking some things wait please ...</string>
    <string name="link_terminal_second_page_title">Select the child to whom you want to link this device</string>
    <string name="link_terminal_second_page_description">All device information will be linked to the selected child</string>
    <string name="link_terminal_second_page_error_permissions" formatted="false">You do not have enough permissions to link the mobile device to %s.</string>
    <string name="child_full_name_detail" formatted="false">%s %s (%d years old)</string>
    <string name="child_has_terminals_linked" formatted="false">has %d devices linked</string>
    <string name="child_has_not_terminals_linked">No devices linked</string>
    <string name="loading_children_message">Loading Children ...</string>
    <string name="error_loading_children_information">Error loading children\'s information</string>
    <string name="sos_your_current_location">Your current location</string>
    <string name="sos_button_text">SOS \n Tap To Activate</string>
    <string name="bed_time_screen_title">Bed Time</string>
    <string name="bed_time_screen_description">Keep calm and get same sleep - it\'s time for bed!. \n
    Your device will be available at</string>
    <string name="bed_time_screen_device_available_at">7:00 am</string>
    <string name="bed_time_screen_pick_me_up">PickMeUp</string>
    <string name="bed_time_screen_sos">SOS</string>
    <string name="geofence_close">Close</string>
    <string name="settings_lock_screen_title">You do not have access to this section</string>
    <string name="settings_lock_screen_description">Access to this section is restricted by parental control rules</string>
</resources>