<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_11">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">

        <!-- Title Text -->
        <TextView
            android:id="@+id/titleText"
            style="@style/CommonStrongText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:gravity="center"
            android:padding="@dimen/common_padding"
            android:text="@string/link_terminal_first_page_check"
            android:textAlignment="center"
            android:textColor="@color/commonWhite" />

        <!-- App Icon -->
        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/content_not_be_loaded"
            android:layout_margin="@dimen/common_margin"
            android:src="@drawable/app_icon_white"
            />


        <!-- Content Text -->
        <TextView
            android:id="@+id/contentText"
            style="@style/CommonStrongText.Big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:gravity="center"
            android:padding="@dimen/common_padding"
            android:visibility="gone"
            android:text="@string/link_terminal_first_page_description"
            android:textAlignment="center"
            android:textColor="@color/commonWhite"/>


    </LinearLayout>

</RelativeLayout>