<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding"
    android:fitsSystemWindows="true">


    <!-- App Logo -->
    <ImageView
        android:id="@+id/appLogoImage"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_margin="@dimen/common_margin"
        android:contentDescription="@string/content_not_be_loaded"
        android:src="@drawable/app_icon_white"
        app:layout_constraintBottom_toTopOf="@id/introText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <!-- Intro Text -->
    <TextView
        android:id="@+id/introText"
        style="@style/CommonStrongText"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_margin="@dimen/common_margin"
        android:padding="@dimen/common_padding"
        android:gravity="center"
        android:text="@string/sign_in_title"
        android:textAlignment="center"
        android:textColor="@color/commonWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogoImage"
        app:layout_constraintBottom_toTopOf="@id/loginContainer"/>


    <!-- Login Container -->
    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_margin"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/loginBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introText">


        <!-- email input -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:textColorHint="@color/commonWhite"
            android:theme="@style/CommonTextInputLayout"
            app:counterEnabled="true"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/TextStyles.TextFloatLabelAppearance">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address_hint"
                android:inputType="textEmailAddress"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

        <!-- password input -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:textColorHint="@color/commonWhite"
            android:theme="@style/CommonTextInputLayout"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/TextStyles.TextFloatLabelAppearance"
            app:passwordToggleEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <!-- Actions Buttons -->
    <Button
        android:id="@+id/loginBtn"
        style="@style/CommonActionButton"
        android:layout_width="@dimen/common_action_button_width"
        android:layout_height="@dimen/common_action_button_height"
        android:layout_margin="@dimen/common_margin"
        android:text="@string/sign_in_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginContainer"/>


</android.support.constraint.ConstraintLayout>
